<resources>
    <string name="app_name">DetectionApp</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="strHome">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="guardTxt">In Case of Emergency keep telling family members to contact me</string>
    <string name="sosTxt">In Case of Emergency call Guard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>